# pytest-mimic

./: .pre-commit-config.yaml  README.md  README.rst  mkdocs.yml  pyproject.toml  tox.ini
.github/workflows/: all_checks_pass.yml  main.yml  publish_to_pypi.yml  publish_to_testpypi.yml
docs/: advanced.md  api.md  examples.md  index.md  usage.md
src/pytest_mimic/: __init__.py  mimic_manager.py  plugin.py
tests/: conftest.py  example_module.py  test_mimic.py  test_mimic_class_methods.py  test_mimic_global_scope.py  test_mimic_manager.py
